third_party/WebKit/Source/WebCore/Modules/webdatabase/DatabaseManager.h
@@ -36,6 +36,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+class AbstractDatabaseServer;
 class DatabaseManagerClient;
 class DatabaseTaskSynchronizer;
 class SecurityOrigin;
@@ -86,6 +87,8 @@ public:
 private:
     DatabaseManager();
     ~DatabaseManager() { }
+
+    AbstractDatabaseServer* m_server;
 };
 
 } // namespace WebCore
