third_party/WebKit/Source/WebCore/platform/PlatformStrategies.h
@@ -32,6 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace WebCore {
 
 class CookiesStrategy;
+class DatabaseStrategy;
 class LoaderStrategy;
 class PasteboardStrategy;
 class PluginStrategy;
@@ -45,6 +46,13 @@ public:
         if (!m_cookiesStrategy)
             m_cookiesStrategy = createCookiesStrategy();
         return m_cookiesStrategy;
+    }
+
+    DatabaseStrategy* databaseStrategy()
+    {
+        if (!m_databaseStrategy)
+            m_databaseStrategy = createDatabaseStrategy();
+        return m_databaseStrategy;
     }
 
     LoaderStrategy* loaderStrategy()
@@ -85,6 +93,7 @@ public:
 protected:
     PlatformStrategies()
         : m_cookiesStrategy(0)
+        , m_databaseStrategy(0)
         , m_loaderStrategy(0)
         , m_pasteboardStrategy(0)
         , m_pluginStrategy(0)
@@ -99,6 +108,7 @@ protected:
 
 private:
     virtual CookiesStrategy* createCookiesStrategy() = 0;
+    virtual DatabaseStrategy* createDatabaseStrategy() = 0;
     virtual LoaderStrategy* createLoaderStrategy() = 0;
     virtual PasteboardStrategy* createPasteboardStrategy() = 0;
     virtual PluginStrategy* createPluginStrategy() = 0;
@@ -106,6 +116,7 @@ private:
     virtual VisitedLinkStrategy* createVisitedLinkStrategy() = 0;
 
     CookiesStrategy* m_cookiesStrategy;
+    DatabaseStrategy* m_databaseStrategy;
     LoaderStrategy* m_loaderStrategy;
     PasteboardStrategy* m_pasteboardStrategy;
     PluginStrategy* m_pluginStrategy;
