third_party/WebKit/Source/WebKit/efl/WebCoreSupport/PlatformStrategiesEfl.cpp
@@ -51,6 +51,11 @@ CookiesStrategy* PlatformStrategiesEfl::createCookiesStrategy()
     return this;
 }
 
+DatabaseStrategy* PlatformStrategiesEfl::createDatabaseStrategy()
+{
+    return this;
+}
+
 LoaderStrategy* PlatformStrategiesEfl::createLoaderStrategy()
 {
     return this;
