third_party/WebKit/Source/WebKit/mac/WebCoreSupport/WebPlatformStrategies.mm
@@ -54,6 +54,11 @@ CookiesStrategy* WebPlatformStrategies::createCookiesStrategy()
     return this;
 }
 
+DatabaseStrategy* WebPlatformStrategies::createDatabaseStrategy()
+{
+    return this;
+}
+
 LoaderStrategy* WebPlatformStrategies::createLoaderStrategy()
 {
     return this;
