third_party/WebKit/Source/WebKit2/WebProcess/WebCoreSupport/WebPlatformStrategies.cpp
@@ -77,6 +77,11 @@ CookiesStrategy* WebPlatformStrategies::createCookiesStrategy()
     return this;
 }
 
+DatabaseStrategy* WebPlatformStrategies::createDatabaseStrategy()
+{
+    return this;
+}
+
 LoaderStrategy* WebPlatformStrategies::createLoaderStrategy()
 {
     return this;
@@ -232,6 +237,13 @@ void WebPlatformStrategies::deleteAllCookies(NetworkingContext* context)
 #endif
 
     WebCore::deleteAllCookies(context);
+}
+
+// DatabaseStrategy
+
+AbstractDatabaseServer* WebPlatformStrategies::getDatabaseServer()
+{
+    return DatabaseStrategy::getDatabaseServer(); // Use the default for now.
 }
 
 // LoaderStrategy
